--- a/register/templates/register/user_create_complete.html
+++ b/register/templates/register/user_create_complete.html
@@ -1,5 +1,6 @@
 {% extends "register/base.html" %}
 {% block content %}
+<div class="blank"></div>
 <p>
     本登録が完了しました。<br>
     登録されたメールアドレスとパスワードでログインしてください。<br>
