--- a/register/templates/register/email_change_done.html
+++ b/register/templates/register/email_change_done.html
@@ -1,5 +1,6 @@
 {% extends "register/base.html" %}
 {% block content %}
+<div class="blank"></div>
 <p>
     確認メールに記載されているリンクをクリックすると、ユーザー情報が変更されます。
 </p>
