--- a/register/templates/register/base.html
+++ b/register/templates/register/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'register/style/text.css'%}" />
 
   
-    <title>Document</title>
+    <title>Img To Note</title>
 </head>
 <body>
   <div class="wrapper">
