--- a/register/templates/register/base.html
+++ b/register/templates/register/base.html
@@ -53,8 +53,11 @@
     <!-- メインコンテント -->
       <main>{% block content %}{% endblock %}</main>
 
+
       <footer>
         <small>&copy;Img To Note,inc</small>
     </footer>
+    
+</div>
 </body>
 </html>
