--- a/register/templates/register/user_create_complete.html
+++ b/register/templates/register/user_create_complete.html
@@ -4,6 +4,6 @@
 <p>
     本登録が完了しました。<br>
     登録されたメールアドレスとパスワードでログインしてください。<br>
-    <a class="btn btn-primary btn-lg" href="{% url 'register:login' %}">ログイン</a>
+    <button type="submit"><a href="{% url 'register:login' %}">ログイン</a></button>
 </p>
 {% endblock %}
