--- a/register/templates/register/user_form.html
+++ b/register/templates/register/user_form.html
@@ -1,7 +1,8 @@
 {% extends "register/base.html" %}
 {% block content %}
+<div class="blank"></div>
 <form action="" method="POST" style="height: 50vh; width: 100%;">
-    <div style="margin-top: 15rem;">
+    <div >
     {{ form.non_field_errors }}
     <table class="table" style="width: 100%;">
         <tbody style="width: 100%;">
