--- a/register/static/register/style/index.css
+++ b/register/static/register/style/index.css
@@ -350,7 +350,7 @@ h1.section-title {
   font-size: xx-large;
 }
 input {
-  width: 80%;
+  width: 100%;
   height: 5vh;
 }
 .text-main {
@@ -423,4 +423,18 @@ article.list > a > div.diary-title-wrapper {
 
 main {
   margin-bottom: 5rem;
+}
+article.imgtonote {
+  text-align: center;
+}
+
+article.imgtonote > form > p > input {
+  margin-left: 30vw;
+}
+input[type="text"],
+input[type="email"] {
+  padding: 0.5rem;
+}
+tbody {
+  margin-left: 5rem;
 }
