--- a/register/templates/register/Img_To_Note.html
+++ b/register/templates/register/Img_To_Note.html
@@ -9,7 +9,7 @@
 <script src="{% static 'register/js/copyUseJavaScript.js'%}" type="text/javascript"></script>
 
 
-    <article>
+    <article class="imgtonote">
     <h2 class="text-title">さぁ、画像からテキストを抽出してみよう！</h2>
 
     <form action="" method="POST" enctype="multipart/form-data" >
@@ -27,7 +27,7 @@
         
         <form action="{% url 'register:diary_created' %}" method="POST">
         {% if user.is_authenticated %}
-        <div><h5>ノートのタイトル</ｈ><input type="text" name="title"></div>
+        <div><h5>ノートのタイトル</h5><input type="text" name="title"></div>
         <br>
         <h5>本文</h5>
         {% endif %}
