--- a/register/static/register/style/index-res.css
+++ b/register/static/register/style/index-res.css
@@ -131,6 +131,10 @@
     width: 100%;
     margin-bottom: 0.5rem;
   }
+  input {
+    width: 100%;
+    height: 5vh;
+  }
 }
 
 @media (max-width: 576px) {
