--- a/register/static/register/style/index.css
+++ b/register/static/register/style/index.css
@@ -349,10 +349,7 @@ iframe {
 h1.section-title {
   font-size: xx-large;
 }
-input {
-  width: 100%;
-  height: 5vh;
-}
+
 .text-main {
   margin-top: 3rem;
 }
@@ -432,9 +429,20 @@ article.imgtonote > form > p > input {
   margin-left: 30vw;
 }
 input[type="text"],
-input[type="email"] {
+input[type="email"],
+input[type="password"] {
   padding: 0.5rem;
 }
 tbody {
   margin-left: 5rem;
+}
+form > div > input[type="text"] {
+  width: 70vw;
+}
+
+article.imgtonote > form > p > input {
+  width: 100%;
+}
+input {
+  width: 100%;
 }
