--- a/register/templates/register/diary_list.html
+++ b/register/templates/register/diary_list.html
@@ -11,7 +11,7 @@
         <h1 class="section-title">{{ heading }}</h1>
 
         <form action="" method="get" >
-            <p>Key Words Search:</p>
+            <p>Search:</p>
             <input name="query" value="{{ request.GET.query }}" type="text">
             <button type="submit" class="search">検索する</button>
         </form>
