--- a/register/templates/register/edit.html
+++ b/register/templates/register/edit.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="blank"></div>
 
+<div class="margin-vertical">
 
-
-    <h3>{{ diary.title }} の編集ページ</h3>
+    <div class="center"><h3>{{ diary.title }} の編集ページ</h3></div>
 
     <form action="" method="POST">
         <table class="table" style="width: 100%;">
@@ -26,5 +26,6 @@
     </div>
     </form>
     
+</div>
 
 {% endblock %}
