--- a/register/static/register/style/index-res.css
+++ b/register/static/register/style/index-res.css
@@ -131,7 +131,9 @@
     width: 100%;
     margin-bottom: 0.5rem;
   }
-  input {
+  table > tbody > tr > td > input[type="text"],
+  input[type="email"],
+  input[type="password"] {
     width: 100%;
     height: 5vh;
   }
