--- a/register/templates/register/create.html
+++ b/register/templates/register/create.html
@@ -3,9 +3,10 @@
 {% block content %}
 <div class="blank"></div>
 
-
+<div class="margin-vertical">
+    <div class="center">
 <h3>Noteを新規作成
-</h3>
+</h3></div>
     <form action="" method="POST">
         <table class="table" style="width: 100%;">
             <tbody style="width: 100%;">
@@ -26,6 +27,6 @@
     </div>
     </form>
 
-    
+</div>
 
 {% endblock %}
